# lin-outliner

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  electron.vite.config.ts  index.html  launcher.html  package.json  playwright.config.ts  playwright.smoke.config.ts  tsconfig.json  vite.config.ts  美国政府限制外国人使用Fable5事件分析.pptx
catalog/: managed-skills-v1.json
crates/lin-core/: Cargo.toml
docs/: TASKS.md
docs/plans/: README.md  agent-action-decision-timeouts.md  agent-ask-user-question-tool.md  agent-authoring.md  agent-browser-computer-tools.md  agent-browser-control.md  agent-capability-permissions.md  agent-channel-parallel-runtime.md  agent-channel-peers.md  agent-codex-automations.md  agent-codex-core.md  agent-codex-memory.md  agent-composer-attachment-path-model.md  agent-computer-control.md  agent-context-architecture.md  agent-context-slim-decouple.md  agent-conversation-entry-identity-ux.md  agent-conversation-model.md  agent-cross-agent-memory.md  agent-data-model.md  agent-debug-run-grounded.md  (+140 more)
scripts/: design-system-metrics.ts  docs-check.ts  gen-icon.mjs  gen-icon.sh  probe-asset-hashing.ts  probe-ime-split.ts  probe-launcher-context.ts  probe-past-chats-search.ts  probe-preview-translation-cache.ts  probe-text-search-index.ts  probe-web-tools.ts  sync-built-in-skills.ts  tauri-dev-server.mjs
src/: third-party.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/agent-worker/: pi-mono-worker.mjs
src-tauri/capabilities/: default.json
src-tauri/src/: agent_host.rs  agent_settings.rs  lib.rs  main.rs
(+1272 files in other folders)
