[package]
name = "lin-outliner"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lin_outliner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
lin-core = { path = "../crates/lin-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
thiserror.workspace = true
